Terms&condition.html

--- a/Terms&condition.html
+++ b/Terms&condition.html
@@ -176,20 +176,15 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="left">
-            &copy; 2024-25 Keywords From Urls | 
-            <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
-                <img src="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" />
-            </a>
-            <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
-        </div>
+    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
+<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
         <div class="right">
             <a href="about-us.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="Disclaimer.html">Disclaimer</a>
-            <a href="Terms&condition.html">Terms & Condition</a>
+            <a href="https://keywordsfromurls.com/Disclaimer.html">Disclaimer</a>
+            <a href="https://keywordsfromurls.com/Terms&condition.html">Terms&condition</a>
         </div>
     </footer>
 </body>
