--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -209,6 +209,7 @@
         </p>
     </div>
         <br>
+        <br>
     <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
 <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
@@ -217,8 +218,8 @@
             <a href="about-us.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="Disclaimer.html">Disclaimer</a>
-            <a href="Terms&condition.html">Terms&condition</a>
+            <a href="https://keywordsfromurls.com/Disclaimer.html">Disclaimer</a>
+            <a href="https://keywordsfromurls.com/Terms&condition.html">Terms&condition</a>
         </div>
     </footer>
 
