--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="Extract keywords from URLs effortlessly. Use our online tool for keyword extraction, density analysis, Keyword grouping, Slug generator, and SEO optimization. Fast, reliable, and user-friendly.">
+    <meta name="keywords" content="Keywords From URLs, Keyword Extractor, Keywords Density Tools, SEO Tools, URL Keyword Tool, Slug generator Tool, Keywords Grouping Tool">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="canonical" href="https://keywordsfromurls.com/">
+
+    <meta name="robots" content="index, follow">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
     <title>Keywords From URLs | Online Keyword Extractor & Density Tools</title>
-     <meta name="description" content="Extract keywords from URLs effortlessly. Use our online tool for keyword extraction, density analysis, Keyword grouping, Slug generator, and SEO optimization. Fast, reliable, and user-friendly.">
-    <meta name="keywords" content="Keywords From URLs, Keyword Extractor, Keywords Density Tools, SEO Tools, URL Keyword Tool, Slug generator Tool, Keywords Grouping Tool">
+    
     <style>
         /* General Reset */
         * {
