--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Analyze keyword density and word count with our free online tool. Improve your SEO by optimizing content for search engines and achieving perfect keyword balance.">
     <meta name="keywords" content="keyword density tool, word count tool, SEO content analyzer, keyword optimization, keyword density checker, content word count tool, SEO tools, optimize keywords, keyword analysis">
+    <link rel="canonical" href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html">
+
     <title>Keyword Density Tool</title>
     <style>
         * {
