--- a/index.html
+++ b/index.html
@@ -4,20 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Extract keywords from URLs effortlessly. Use our online tool for keyword extraction, density analysis, Keyword grouping, Slug generator, and SEO optimization. Fast, reliable, and user-friendly.">
-    <meta name="keywords" content="Keywords From URLs, Keyword Extractor, Keywords Density Tools, SEO Tools, URL Keyword Tool, Slug generator Tool, Keywords Grouping Tool">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+     <meta name="description" content="Extract keywords from URLs with our free online tool. Simplify keyword extraction, improve SEO, and organize website data easily. Try it now!">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
     <meta name="robots" content="index, follow">
+    <head>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Keywords From URLs - Extract Keywords Effortlessly">
+    <meta property="og:description" content="Extract keywords from URLs effortlessly with our online tool. Perform keyword grouping, density analysis, and SEO optimization.">
+    <meta property="og:image" content="https://keywordsfromurls.com/og-image.png">
+    <meta property="og:url" content="https://keywordsfromurls.com/">
+    <meta property="og:type" content="website">
+</head>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
+<script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Keywords From URLs",
+        "url": "https://keywordsfromurls.com/",
+        "description": "Extract keywords from URLs effortlessly with our online tool. Perform keyword grouping, density analysis, and SEO optimization.",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://keywordsfromurls.com/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
+   <title>Keywords From URLs - Extract Keywords for Better SEO Optimization</title>
 
-    <title>Keywords From URLs | Online Keyword Extractor & Density Tools</title>
     
     <style>
         /* General Reset */
@@ -234,10 +258,39 @@
             margin-top: 20px;
         }
         }
+        share-icons {
+            display: flex;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .share-icons a {
+            text-decoration: none;
+            color: white;
+            font-size: 20px;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            transition: transform 0.3s ease;
+        }
+        .share-icons a:hover {
+            transform: scale(1.1);
+        }
+        .facebook { background-color: #4267B2; }
+        .twitter { background-color: #1DA1F2; }
+        .linkedin { background-color: #0077B5; }
+        .whatsapp { background-color: #25D366; }
     </style>
 </head>
 
 <body>
+    <div itemscope itemtype="https://schema.org/WebSite">
+    <meta itemprop="name" content="Keywords From URLs">
+    <meta itemprop="url" content="https://keywordsfromurls.com/">
+    <meta itemprop="description" content="Extract keywords from URLs effortlessly with our online tool.">
+</div>
     <!-- Header -->
     <header class="header">
         <div class="logo">Keywords From Urls</div>
@@ -381,7 +434,7 @@
 
     <div style="text-align:center;">
         <a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s1080/Keywords%20From%20Urls.png" style="display: block; padding: 1em 0;">
-            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s320/Keywords%20From%20Urls.png" alt="Keywords Image" width="320">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s320/Keywords%20From%20Urls.png" alt="Keyword extraction tool" loading="lazy" width="320">
         </a>
         <h3>Extract Keywords from URLs to Organize Your Website Data</h3>
         <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Heres how it works:</p>
@@ -391,6 +444,27 @@
             <li>If your blog is on Blogger and you provide a URL like https://xyz.blogspot.com/01/01/one-more-second-logic.html, the keyword extracted will be one more second logic.</li>
         </ul>
     </div>
+         <h3>Share This Site</h3>
+    <div class="share-icons">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://keywordsfromurls.com" 
+           class="facebook" target="_blank" title="Share on Facebook">
+            F
+        </a>
+        <a href="https://twitter.com/intent/tweet?url=https://keywordsfromurls.com&text=Check+out+this+amazing+tool!" 
+           class="twitter" target="_blank" title="Share on Twitter">
+            T
+        </a>
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://keywordsfromurls.com" 
+           class="linkedin" target="_blank" title="Share on LinkedIn">
+            L
+        </a>
+        <a href="https://api.whatsapp.com/send?text=Check+out+this+amazing+tool!+https://keywordsfromurls.com" 
+           class="whatsapp" target="_blank" title="Share on WhatsApp">
+            W
+        </a>
+    </div>
+        <p>Discover other tools: <a href="keywords-grouping.html">Keyword Grouping Tool</a>, <a href="Slug-Generator.html">Slug Generator</a>, and <a href="Keyword-Density-And-Wordcount-Tool.html">Keyword Density Tool</a>.</p>
+
 
      <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
