--- a/index.html
+++ b/index.html
@@ -260,20 +260,20 @@
         }
         share-icons {
             display: flex;
-            gap: 10px;
+            justify-content: center;
+            gap: 15px;
             margin-top: 20px;
         }
         .share-icons a {
-            text-decoration: none;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
             color: white;
             font-size: 20px;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            transition: transform 0.3s ease;
+            text-decoration: none;
         }
         .share-icons a:hover {
             transform: scale(1.1);
@@ -283,6 +283,15 @@
         .linkedin { background-color: #0077B5; }
         .whatsapp { background-color: #25D366; }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Share This Site",
+      "description": "Spread the word! Share this amazing site with your friends and family.",
+      "url": "https://example.com"
+    }
+    </script>
 </head>
 
 <body>
@@ -315,6 +324,7 @@
 </div>
 
         <div class="container">
+            <h1>Keywords From Url Extractor Tool</h1>
         <textarea id="urlInput" placeholder="Paste up to 500 URLs here"></textarea>
         <div class="button-container">
             <button id="copyButton">Copy URLs</button>
@@ -436,13 +446,15 @@
         <a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s1080/Keywords%20From%20Urls.png" style="display: block; padding: 1em 0;">
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s320/Keywords%20From%20Urls.png" alt="Keyword extraction tool" loading="lazy" width="320">
         </a>
-        <h3>Extract Keywords from URLs to Organize Your Website Data</h3>
+        <h2>Extract Keywords from URLs to Organize Your Website Data</h2>
         <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Heres how it works:</p>
         <ul>
             <li>If you enter a URL like https://www.keywordsfromurls.com/, the tool extracts the keyword www.keywordsfromurls.com.</li>
             <li>For a URL such as https://keywordsfromurls.com/keywordsfromurls/, the keyword extracted would be keywordsfromurls.com</li>
             <li>If your blog is on Blogger and you provide a URL like https://xyz.blogspot.com/01/01/one-more-second-logic.html, the keyword extracted will be one more second logic.</li>
         </ul>
+        <p>Discover other tools: <a href="keywords-grouping.html">Keyword Grouping Tool</a>, <a href="Slug-Generator.html">Slug Generator</a>, and <a href="Keyword-Density-And-Wordcount-Tool.html">Keyword Density Tool</a>.</p>
+
     </div>
          <h3>Share This Site</h3>
     <div class="share-icons">
@@ -463,11 +475,10 @@
             W
         </a>
     </div>
-        <p>Discover other tools: <a href="keywords-grouping.html">Keyword Grouping Tool</a>, <a href="Slug-Generator.html">Slug Generator</a>, and <a href="Keyword-Density-And-Wordcount-Tool.html">Keyword Density Tool</a>.</p>
-
+        
 
      <!-- Footer -->
-    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+    <footer class="footer"><div class="left">&copy; 2025 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
 <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
 <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
         <div class="right">
