--- a/index.html
+++ b/index.html
@@ -4,45 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Extract keywords from URLs with our free online tool. Simplify keyword extraction, improve SEO, and organize website data easily. Try it now!">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="description" content="Extract keywords from URLs with our free online tool. Simplify keyword extraction, improve SEO, and organize website data easily. Try it now!">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://keywordsfromurls.com/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Keyword Extraction",
+                    "item": "https://keywordsfromurls.com/keyword-extraction.html"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Slug Generator",
+                    "item": "https://slugify.online/"
+                }
+            ]
+        }
+    </script>
+    
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <!-- Structured Data: WebSite -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "Keywords From URLs",
+            "url": "https://keywordsfromurls.com/",
+            "description": "Extract keywords from URLs effortlessly with our online tool. Perform keyword grouping, density analysis, and SEO optimization.",
+            "potentialAction": {
+                "@type": "SearchAction",
+                "target": "https://keywordsfromurls.com/search?q={search_term_string}",
+                "query-input": "required name=search_term_string"
+            }
+        }
+    </script>
 
     <meta name="robots" content="index, follow">
-    <head>
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Keywords From URLs - Extract Keywords Effortlessly">
     <meta property="og:description" content="Extract keywords from URLs effortlessly with our online tool. Perform keyword grouping, density analysis, and SEO optimization.">
     <meta property="og:image" content="https://keywordsfromurls.com/og-image.png">
     <meta property="og:url" content="https://keywordsfromurls.com/">
     <meta property="og:type" content="website">
-</head>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-
-<script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "Keywords From URLs",
-        "url": "https://keywordsfromurls.com/",
-        "description": "Extract keywords from URLs effortlessly with our online tool. Perform keyword grouping, density analysis, and SEO optimization.",
-        "potentialAction": {
-            "@type": "SearchAction",
-            "target": "https://keywordsfromurls.com/search?q={search_term_string}",
-            "query-input": "required name=search_term_string"
-        }
-    }
-    </script>
-   <title>Keywords From URLs - Extract Keywords for Better SEO Optimization</title>
-
     
+    <title>Keywords From URLs - Extract Keywords for Better SEO Optimization</title>
+
     <style>
         /* General Reset */
         * {
@@ -118,7 +145,7 @@
             background-color: #0056b3;
         }
 
-       container {
+        .container {
             position: relative;
             width: 100%;
             max-width: 1200px;
@@ -136,7 +163,7 @@
             margin-bottom: 10px;
         }
 
-         button {
+        button {
             padding: 8px 12px;
             font-size: 14px;
             cursor: pointer;
@@ -198,6 +225,7 @@
         .copy-keywords-button:hover {
             background-color: #0056b3;
         }
+
         /* Footer */
         .footer {
             background-color: #007BFF;
@@ -253,86 +281,45 @@
                 flex-direction: column;
             }
             p {
+                text-align: center;
+                font-size: 1rem;
+                margin-top: 20px;
+            }
+        }
+
+        /* Container to center the section */
+        .share-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
-            font-size: 1rem;
-            margin-top: 20px;
+            margin: 20px auto;
+            max-width: 600px;
+            padding: 20px;
         }
+
+        /* Flexbox for share icons */
+        .share-icons {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
         }
-       /* Container to center the section */
-.share-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 20px auto;
-    max-width: 600px;
-    padding: 20px;
-}
 
-/* Flexbox for share icons */
-.share-icons {
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    margin-top: 20px;
-    flex-wrap: wrap; /* Ensures responsiveness on small screens */
-}
+        .share-icons a {
+            color: #333;
+            font-size: 24px;
+            text-decoration: none;
+             padding: 0 5px;
+        }
 
-/* Individual share icons */
-.share-icons a {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    color: white;
-    font-size: 20px;
-    text-decoration: none;
-    transition: transform 0.2s ease-in-out;
-}
-
-/* Hover effect */
-.share-icons a:hover {
-    transform: scale(1.1);
-}
-
-/* Specific platform styles */
-.facebook { background-color: #4267B2; }
-.twitter { background-color: #1DA1F2; }
-.linkedin { background-color: #0077B5; }
-.whatsapp { background-color: #25D366; }
-
-/* Responsiveness */
-@media (max-width: 600px) {
-    .share-icons {
-        gap: 15px; /* Reduce gap on smaller screens */
-    }
-    .share-icons a {
-        width: 40px; /* Smaller icons for smaller screens */
-        height: 40px;
-        font-size: 18px;
-    }
-}
-
+        .share-icons a:hover {
+            color: #007BFF;
+        }
     </style>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Share This Site",
-      "description": "Spread the word! Share this amazing site with your friends and family.",
-      "url": "https://example.com"
-    }
-    </script>
 </head>
 
 <body>
-    <div itemscope itemtype="https://schema.org/WebSite">
-    <meta itemprop="name" content="Keywords From URLs">
-    <meta itemprop="url" content="https://keywordsfromurls.com/">
-    <meta itemprop="description" content="Extract keywords from URLs effortlessly with our online tool.">
-</div>
+   
     <!-- Header -->
     <header class="header">
         <div class="logo">Keywords From Urls</div>
@@ -490,27 +477,14 @@
 
     </div>
         <div class="share-container">
-    <h3>Share This Site</h3>
-    <div class="share-icons">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://keywordsfromurls.com" 
-           class="facebook" target="_blank" title="Share on Facebook">
-            F
-        </a>
-        <a href="https://twitter.com/intent/tweet?url=https://keywordsfromurls.com&text=Check+out+this+amazing+tool!" 
-           class="twitter" target="_blank" title="Share on Twitter">
-            T
-        </a>
-        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://keywordsfromurls.com" 
-           class="linkedin" target="_blank" title="Share on LinkedIn">
-            L
-        </a>
-        <a href="https://api.whatsapp.com/send?text=Check+out+this+amazing+tool!+https://keywordsfromurls.com" 
-           class="whatsapp" target="_blank" title="Share on WhatsApp">
-            W
-        </a>
-    </div>
-</div>
-
+            <p>Share this tool:</p>
+            <div class="share-icons">
+                <a href="https://twitter.com/share?url=https://keywordsfromurls.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://keywordsfromurls.com" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/shareArticle?url=https://keywordsfromurls.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://wa.me/?text=Check%20out%20this%20awesome%20tool%20for%20extracting%20keywords%20from%20URLs:%20https://keywordsfromurls.com" target="_blank" title="Share on WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            </div>
+        </div>
 
      <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2025 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
