--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover the ultimate keywords grouping tool to organize, categorize, and optimize your keywords for SEO, PPC campaigns, and content strategy. Enhance your search engine rankings and streamline your workflow today!">
+    <meta name="robots" content="index, follow">
+
+    <meta name="description" content="Group and optimize your keywords for SEO, PPC, and content strategy with our free Keyword Grouping Tool. Enhance rankings and streamline your campaigns!">
+<meta property="og:title" content="Keyword Grouping Tool">
+<meta property="og:description" content="Group and optimize your keywords for SEO, PPC campaigns, and content strategy. Free to use!">
+<meta property="og:image" content="https://keywordsfromurls.com/tool-image.png">
+<meta property="og:url" content="https://keywordsfromurls.com/">
+<meta property="og:type" content="website">
+
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Keyword Grouping</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/boottrap.bundle.min.js"></script>
+   <title>Keyword Grouping Tool | Organize & Optimize Keywords</title>
+
     <style>
         body {
             background-color: #f4f4f4;
@@ -159,6 +168,33 @@
             }
             }
     </style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Keyword Grouping Tool",
+  "url": "https://keywordsfromurls.com/",
+  "description": "Group and optimize your keywords for SEO, PPC campaigns, and content strategy.",
+  "applicationCategory": "SEO Tool",
+  "operatingSystem": "All",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Syed Ismail"
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://keywordsfromurls.com/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
 </head>
 <body>
     <!-- Header -->
@@ -180,7 +216,7 @@
             <button>Keyword Density</button></a>
         </div>
     <div class="container text-center">
-        <h2 class="my-4">Keyword Grouping</h2>
+        <h1 class="my-4">Keyword Grouping Tool</h1>
         <div class="form-floating mb-4">
             <textarea class="form-control text-center" id="inputData" maxlength="5000" style="height: 100px;"></textarea>
             <label for="inputData">Input keywords here</label>
