--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -214,6 +214,25 @@
             }
         }
     </style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Free Online Slug Generator",
+  "description": "Generate clean, SEO-friendly slugs for your URLs with our free slug generator tool. Simplify your URL optimization for blogs, websites, and e-commerce platforms.",
+  "url": "https://keywordsfromurls.com/Slug-Generator.html",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Keywords From Urls",
+    "url": "https://keywordsfromurls.com/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://keywordsfromurls.com/logo.png"
+    }
+  }
+}
+</script>
+
 </head>
 <body>
     <!-- Header -->
