Keyword-Density-And-Wordcount-Tool.html

--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -221,6 +221,41 @@
             }
         }
     </style>
+   <script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Keyword Density Tool",
+    "url": "https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html",
+    "description": "Analyze keyword density and word count with our free online tool. Optimize content for search engines with perfect keyword balance.",
+    "applicationCategory": "SEO Tool",
+    "operatingSystem": "All",
+    "browserRequirements": "Requires JavaScript enabled",
+    "author": {
+        "@type": "Person",
+        "name": "Syed Ismail"
+    },
+    "publisher": {
+        "@type": "Organization",
+        "name": "Keywords From Urls",
+        "url": "https://keywordsfromurls.com",
+        "logo": {
+            "@type": "ImageObject",
+            "url": "https://keywordsfromurls.com/logo.png",
+            "width": 200,
+            "height": 50
+        }
+    },
+    "datePublished": "2025-01-03",
+    "dateModified": "2025-01-03",
+    "offers": {
+        "@type": "Offer",
+        "price": "0.00",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+    }
+   </script>
+
 </head>
 <body>
     <header class="header">
