Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -214,24 +214,28 @@
             }
         }
     </style>
-    <script type="application/ld+json">
+   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Free Online Slug Generator",
+  "@type": "SoftwareApplication",
+  "name": "Slug Generator Tool",
   "description": "Generate clean, SEO-friendly slugs for your URLs with our free slug generator tool. Simplify your URL optimization for blogs, websites, and e-commerce platforms.",
+  "applicationCategory": "SEO Tool",
+  "operatingSystem": "Web-based",
   "url": "https://keywordsfromurls.com/Slug-Generator.html",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
   "publisher": {
     "@type": "Organization",
     "name": "Keywords From Urls",
-    "url": "https://keywordsfromurls.com/",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://keywordsfromurls.com/logo.png"
-    }
+    "url": "https://keywordsfromurls.com/"
   }
 }
 </script>
+
 
 </head>
 <body>
