--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script type="application/ld+json">
+   <script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
         {
-            "@context": "https://schema.org",
-            "@type": "BreadcrumbList",
-            "itemListElement": [
-                {
-                    "@type": "ListItem",
-                    "position": 1,
-                    "name": "Home",
-                    "item": "https://keywordsfromurls.com/"
-                },
-                {
-                    "@type": "ListItem",
-                    "position": 2,
-                    "name": "Keyword Extraction",
-                    "item": "https://keywordsfromurls.com/keyword-extraction.html"
-                },
-                {
-                    "@type": "ListItem",
-                    "position": 3,
-                    "name": "Slug Generator",
-                    "item": "https://slugify.online/"
-                }
-            ]
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://keywordsfromurls.com/"
+        },
+        {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "SEO Tools",
+            "item": "https://keywordsfromurls.com/seo-tools.html"
+        },
+        {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Slug Generator",
+            "item": "https://keywordsfromurls.com/Slug-Generator.html"
         }
-    </script>
+    ]
+}
+</script>
+
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
@@ -44,21 +45,26 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-    <!-- Structured Data: WebSite -->
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebSite",
-            "name": "Keywords From URLs",
-            "url": "https://keywordsfromurls.com/",
-            "description": "Extract keywords from URLs effortlessly with our online tool. Perform keyword grouping, density analysis, and SEO optimization.",
-            "potentialAction": {
-                "@type": "SearchAction",
-                "target": "https://keywordsfromurls.com/search?q={search_term_string}",
-                "query-input": "required name=search_term_string"
-            }
-        }
-    </script>
+   <script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Keywords From URLs",
+    "url": "https://keywordsfromurls.com/",
+    "description": "Unlock the full potential of SEO with Keywords From URLs. Extract keywords, group them efficiently, analyze keyword density, and generate SEO-friendly slugs online.",
+    "publisher": {
+        "@type": "Organization",
+        "name": "Keywords From URLs",
+        "url": "https://keywordsfromurls.com/"
+    },
+    "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://keywordsfromurls.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+    }
+}
+</script>
+
 
     <meta name="robots" content="index, follow">
     <!-- Open Graph Meta Tags -->
