--- a/index.html
+++ b/index.html
@@ -4,39 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extract keywords from URLs with our free online tool. Simplify keyword extraction, improve SEO, and organize website data easily. Try it now!">
+    <meta name="description" content="Extract Bulk keywords from Bulk URLs with our free online tool. Simplify keyword extraction, and organize website data easily. Try it now!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-   <script type="application/ld+json">
-{
-    "@context": "https://schema.org",
-    "@type": "BreadcrumbList",
-    "itemListElement": [
-        {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Home",
-            "item": "https://keywordsfromurls.com/"
-        },
-        {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "SEO Tools",
-            "item": "https://keywordsfromurls.com/seo-tools.html"
-        },
-        {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Slug Generator",
-            "item": "https://keywordsfromurls.com/Slug-Generator.html"
-        }
-    ]
-}
-</script>
-
-    
-    <!-- Bootstrap JS -->
+  
+ <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Favicons -->
@@ -44,37 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-
-   <script type="application/ld+json">
-{
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "Keywords From URLs",
-    "url": "https://keywordsfromurls.com/",
-    "description": "Unlock the full potential of SEO with Keywords From URLs. Extract keywords, group them efficiently, analyze keyword density, and generate SEO-friendly slugs online.",
-    "publisher": {
-        "@type": "Organization",
-        "name": "Keywords From URLs",
-        "url": "https://keywordsfromurls.com/"
-    },
-    "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://keywordsfromurls.com/search?q={search_term_string}",
-        "query-input": "required name=search_term_string"
-    }
-}
-</script>
-
-
-    <meta name="robots" content="index, follow">
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Keywords From URLs - Extract Keywords Effortlessly">
-    <meta property="og:description" content="Extract keywords from URLs effortlessly with our online tool. Perform keyword grouping, density analysis, and SEO optimization.">
-    <meta property="og:image" content="https://keywordsfromurls.com/og-image.png">
-    <meta property="og:url" content="https://keywordsfromurls.com/">
-    <meta property="og:type" content="website">
-    
-    <title>Keywords From URLs - Extract Keywords for Better SEO Optimization</title>
+ <title>Keywords From URLs - Extract Keywords for Better SEO Optimization</title>
 
     <style>
         /* General Reset */
