--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="logo">Keywords From Urls</div>
         <nav>
             <a href="https://keywordsfromurls.com/">Home</a>
-            
+            <a href="chrome-extension-for-keyword-extraction-from-urls.html">Chrome Extention</a>
             </nav>
     </header>
 
