--- a/chrome-extension-for-keyword-extraction-from-urls.html
+++ b/chrome-extension-for-keyword-extraction-from-urls.html
@@ -49,9 +49,136 @@
             list-style: disc;
             margin-left: 20px;
         }
+          /* Header */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
+            background-color: #007BFF;
+            color: white;
+        }
+
+        .header .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .header nav {
+            display: flex;
+            gap: 15px;
+        }
+
+        .header nav a {
+            color: white;
+            text-decoration: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .header nav a:hover {
+            background-color: #0056b3;
+        }
+ /* Footer */
+        .footer {
+            background-color: #007BFF;
+            color: white;
+            padding: 15px 30px;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .footer .left {
+            font-size: 14px;
+        }
+
+        .footer .right {
+            display: flex;
+            gap: 15px;
+        }
+
+        .footer .right a {
+            color: white;
+            text-decoration: none;
+            font-size: 14px;
+        }
+
+        .footer .right a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .header nav {
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            .categories {
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            .tool-container textarea {
+                height: 150px;
+            }
+
+            .footer {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+
+            .footer .right {
+                flex-direction: column;
+            }
+            p {
+                text-align: center;
+                font-size: 1rem;
+                margin-top: 20px;
+            }
+        }
+
+        /* Container to center the section */
+        .share-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin: 20px auto;
+            max-width: 600px;
+            padding: 20px;
+        }
+
+        /* Flexbox for share icons */
+        .share-icons {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .share-icons a {
+            color: #333;
+            font-size: 24px;
+            text-decoration: none;
+             padding: 0 5px;
+        }
+
+        .share-icons a:hover {
+            color: #007BFF;
+        }
     </style>
 </head>
 <body>
+     <!-- Header -->
+    <header class="header">
+        <div class="logo">Keywords From Urls</div>
+        <nav>
+            <a href="chrome-extension-for-keyword-extraction-from-urls.html">Chrome Extention</a>
+            </nav>
+    </header>
     <div class="container">
         <h1>Keywords from URLs Chrome Extension</h1>
         <p>
@@ -84,32 +211,17 @@
             If you have any questions or encounter issues contact us at <a href="mailto:isyed486@gmail.com">isyed486@gmail.com</a>.
         </p>
     </div>
-
-    <!-- Support Page Content -->
-    <div class="container" id="support">
-        <h1>Support</h1>
-        <p>
-            Welcome to the support page for the <strong>Keywords from URLs Chrome Extension</strong>. Here you can find solutions to common issues, troubleshooting tips, and contact information.
-        </p>
-
-        <h2>Common Issues</h2>
-        <ul>
-            <li><strong>Extension not working:</strong> Ensure the extension is enabled in <code>chrome://extensions</code>.</li>
-            <li><strong>Permissions error:</strong> Make sure the extension has the necessary permissions enabled.</li>
-        </ul>
-
-        <h2>Contact Us</h2>
-        <p>
-            Still need help? Reach out to us:
-        </p>
-        <ul>
-            <li>Email: <a href="mailto:support@keywordsfromurls.com">support@keywordsfromurls.com</a></li>
-            <li>Visit: <a href="https://keywordsfromurls.com">Our Website</a></li>
-        </ul>
-
-        <p>
-            We're here to help you get the most out of the Keywords from URLs Chrome Extension.
-        </p>
-    </div>
+     <!-- Footer -->
+    <footer class="footer"><div class="left">&copy; 2025 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
+<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
+        <div class="right">
+            <a href="about-us.html" target="_blank">About Us</a>
+            <a href="contact-us.html" target="_blank">Contact Us</a>
+            <a href="privacy-policy.html" target="_blank">Privacy Policy</a>
+            <a href="Disclaimer.html" target="_blank">Disclaimer</a>
+            <a href="Terms&condition.html" target="_blank">Terms&condition</a>
+        </div>
+    </footer>
 </body>
 </html>
