--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
             <a href="privacy-policy.html" target="_blank">Privacy Policy</a>
             <a href="Disclaimer.html" target="_blank">Disclaimer</a>
             <a href="Terms&condition.html" target="_blank">Terms&condition</a>
+             <a href="delete.html" target="_blank">Terms&condition</a>
         </div>
     </footer>
     
