--- a/delete.html
+++ b/delete.html
@@ -3,28 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headcanon Generator</title>
+    <title>DPI Analyzer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+        header {
+            background-color: #007BFF;
+            color: white;
             padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #007BFF;
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        label {
+            display: block;
+            margin-top: 10px;
+        }
+        input, button {
+            margin-top: 5px;
+            padding: 10px;
+            width: 100%;
+            font-size: 1em;
+            border: 1px solid #ddd;
+            border-radius: 5px;
         }
         button {
-            padding: 10px 20px;
-            font-size: 16px;
+            background-color: #007BFF;
+            color: white;
             cursor: pointer;
+            transition: background-color 0.3s;
         }
-        #output {
+        button:hover {
+            background-color: #0056b3;
+        }
+        .result {
             margin-top: 20px;
-            font-size: 18px;
+            font-weight: bold;
+            color: #555;
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #007BFF;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>Headcanon Generator</h1>
-    <button onclick="generateHeadcanon()">Generate Headcanon</button>
-    <div id="output"></div>
-    <script src="script.js"></script>
+    <header>
+        <h1>DPI Analyzer</h1>
+    </header>
+    <div class="container">
+        <!-- Mouse DPI Analyzer -->
+        <h2>Mouse DPI Analyzer</h2>
+        <label for="distance">Physical Distance Moved (in inches):</label>
+        <input type="number" id="distance" placeholder="Enter distance in inches">
+        <label for="pointerDistance">Pointer Distance (in pixels):</label>
+        <input type="number" id="pointerDistance" placeholder="Enter pointer distance in pixels">
+        <button onclick="analyzeMouseDPI()">Calculate Mouse DPI</button>
+        <div id="mouseResult" class="result"></div>
+
+        <!-- Image DPI Analyzer -->
+        <h2>Image DPI Analyzer</h2>
+        <label for="imageWidth">Image Width (in pixels):</label>
+        <input type="number" id="imageWidth" placeholder="Enter image width in pixels">
+        <label for="imageHeight">Image Height (in pixels):</label>
+        <input type="number" id="imageHeight" placeholder="Enter image height in pixels">
+        <label for="imageSize">Physical Size (in inches):</label>
+        <input type="number" id="imageSize" placeholder="Enter physical size in inches">
+        <button onclick="analyzeImageDPI()">Calculate Image DPI</button>
+        <div id="imageResult" class="result"></div>
+
+        <!-- Monitor DPI Analyzer -->
+        <h2>Monitor DPI Analyzer</h2>
+        <label for="screenResolution">Screen Resolution (e.g., 1920x1080):</label>
+        <input type="text" id="screenResolution" placeholder="Enter resolution (e.g., 1920x1080)">
+        <label for="screenSize">Screen Size (in inches):</label>
+        <input type="number" id="screenSize" placeholder="Enter screen size in inches">
+        <button onclick="analyzeMonitorDPI()">Calculate Monitor DPI</button>
+        <div id="monitorResult" class="result"></div>
+    </div>
+    <footer>
+        &copy; 2025 DPI Analyzer Tool
+    </footer>
+
+    <script>
+        // Mouse DPI Analyzer
+        function analyzeMouseDPI() {
+            const distance = parseFloat(document.getElementById('distance').value);
+            const pointerDistance = parseFloat(document.getElementById('pointerDistance').value);
+            if (!distance || !pointerDistance || distance <= 0) {
+                document.getElementById('mouseResult').textContent = "Please enter valid inputs.";
+                return;
+            }
+            const dpi = pointerDistance / distance;
+            document.getElementById('mouseResult').textContent = `Mouse DPI: ${dpi.toFixed(2)}`;
+        }
+
+        // Image DPI Analyzer
+        function analyzeImageDPI() {
+            const width = parseFloat(document.getElementById('imageWidth').value);
+            const height = parseFloat(document.getElementById('imageHeight').value);
+            const size = parseFloat(document.getElementById('imageSize').value);
+            if (!width || !height || !size || size <= 0) {
+                document.getElementById('imageResult').textContent = "Please enter valid inputs.";
+                return;
+            }
+            const totalPixels = Math.sqrt(width ** 2 + height ** 2);
+            const dpi = totalPixels / size;
+            document.getElementById('imageResult').textContent = `Image DPI: ${dpi.toFixed(2)}`;
+        }
+
+        // Monitor DPI Analyzer
+        function analyzeMonitorDPI() {
+            const resolution = document.getElementById('screenResolution').value.split('x');
+            const screenSize = parseFloat(document.getElementById('screenSize').value);
+            if (!resolution || resolution.length !== 2 || !screenSize || screenSize <= 0) {
+                document.getElementById('monitorResult').textContent = "Please enter valid inputs.";
+                return;
+            }
+            const width = parseInt(resolution[0]);
+            const height = parseInt(resolution[1]);
+            if (isNaN(width) || isNaN(height)) {
+                document.getElementById('monitorResult').textContent = "Invalid resolution format.";
+                return;
+            }
+            const totalPixels = Math.sqrt(width ** 2 + height ** 2);
+            const dpi = totalPixels / screenSize;
+            document.getElementById('monitorResult').textContent = `Monitor DPI: ${dpi.toFixed(2)}`;
+        }
+    </script>
 </body>
 </html>
